# ddns-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: release.yml
deploy/: ddns-rust.service
src/: api.rs  config.rs  main.rs
src/provider/: cloudflare.rs  mod.rs
