[package]
name = "ddns-rust"
version = "0.1.1"
edition = "2021"
description = "A simple DDNS service supporting multiple DNS providers"
authors = ["Kenneth"]

[dependencies]
# Web 框架（精简 features）
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }

# HTTP 客户端（精简：只用 rustls，禁用 http2）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# 日志
log = "0.4"
env_logger = "0.11"

# 时间
time = { version = "0.3", features = ["formatting", "macros"] }

# 错误处理
anyhow = "1"
